[package]
name = "liquidator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
solana-sdk = "1.17"
solana-client = "1.17"
solana-account-decoder = "1.17"
solana-transaction-status = "1.17"
log = "0.4"
env_logger = "0.10"
borsh = "0.10"
borsh-derive = "0.10"
base64 = "0.21"
bs58 = "0.5"