[package]
name = "liquidator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
dotenv = "0.15"
anyhow = "1.0"
solana-sdk = "1.17"
solana-client = "1.17"
solana-account-decoder = "1.17"
solana-transaction-status = "1.17"
log = "0.4"
env_logger = "0.10"
borsh = "0.10"
borsh-derive = "0.10"
base64 = "0.21"
bs58 = "0.5"
yellowstone-grpc-client = "1.13"
yellowstone-grpc-proto = "1.13"
tonic = "0.10"
futures = "0.3"
dashmap = "5.5"
once_cell = "1.19"
tracing = "0.1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"